--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.6.2",
     "nodemon": "^3.0.1",
+    "prisma": "^5.1.1",
     "rimraf": "^5.0.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@prisma/client": "^5.1.1",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
