--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "zod": "^3.21.4"
   }
 }
