--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "rimraf .dist && tsc",
-    "start": "npm run build && node dist/HTTP/index.js",
+    "start": "node dist/HTTP/index",
     "dev": "nodemon",
     "test": "jest --no-cache --watchAll"
   },
