--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf .dist && tsc",
+    "build": "tsc",
     "start": "node dist/HTTP/index",
     "dev": "nodemon",
     "test": "jest --no-cache --watchAll"
